<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameProgram"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/program_name"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/developer_name"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameProgram" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="151dp"
        android:background="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameProgram"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/surnameUser"
        android:layout_width="381dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/user_surname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/patronymicUser"
        android:layout_width="381dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/user_patronymic"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameUser" />

    <EditText
        android:id="@+id/ageUser"
        android:layout_width="381dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/user_age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patronymicUser" />

    <EditText
        android:id="@+id/nameUser"
        android:layout_width="381dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameUser" />

    <Button
        android:id="@+id/btnSave1"
        android:layout_width="112dp"
        android:layout_height="60dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="147dp"
        android:text="@string/save_btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageUser" />

    <Button
        android:id="@+id/btnPressureIndicators"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="55dp"
        android:text="@string/pressureIndicators_btn"
        app:layout_constraintEnd_toStartOf="@+id/btnHealthIndicators"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave1" />

    <Button
        android:id="@+id/btnHealthIndicators"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:text="@string/healthIndicators_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPressureIndicators"
        app:layout_constraintTop_toBottomOf="@+id/btnSave1" />

</androidx.constraintlayout.widget.ConstraintLayout>