<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">

    <TextView
        android:id="@+id/tachycardia"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/tachycardia"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pulse" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pressure"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upPressure"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:text="@string/upper_pressure"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <TextView
        android:id="@+id/lowPressure"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/lower_pressure"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upPressure" />

    <TextView
        android:id="@+id/pulse"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/pulse"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowPressure" />

    <EditText
        android:id="@+id/inputUpPressure"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/upPressure"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <EditText
        android:id="@+id/inputLowPressure"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lowPressure"
        app:layout_constraintTop_toBottomOf="@+id/inputUpPressure" />

    <EditText
        android:id="@+id/inputPulse"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="242dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pulse"
        app:layout_constraintTop_toBottomOf="@+id/inputLowPressure" />

    <CheckBox
        android:id="@+id/checkBoxTachyhardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="197dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tachycardia"
        app:layout_constraintTop_toBottomOf="@+id/inputPulse" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="211dp"
        android:ems="10"
        android:hint="@string/date_measurement"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tachycardia" />

    <Button
        android:id="@+id/btnSave2"
        android:layout_width="135dp"
        android:layout_height="67dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="138dp"
        android:text="@string/save_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
</androidx.constraintlayout.widget.ConstraintLayout>