<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VitalStatisticsActivity">

    <TextView
        android:id="@+id/vitalStatistics"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="24dp"
        android:text="@string/vital_statistics"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="249dp"
        android:text="@string/weight"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/inputWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vitalStatistics" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="81dp"
        android:text="@string/steps"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/inputSteps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vitalStatistics" />

    <EditText
        android:id="@+id/inputSteps"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeight" />

    <Button
        android:id="@+id/btnSave3"
        android:layout_width="135dp"
        android:layout_height="67dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="138dp"
        android:text="@string/save_btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps" />
</androidx.constraintlayout.widget.ConstraintLayout>